--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
 <head>
   <meta charset="utf-8">
@@ -6,11 +7,13 @@
 <!--   <link rel = 'stylesheet' type='text/css' href = 'style.css'></> -->
   <script src="jquery.js"></script>
   <script src ="test.js"></script>
+  <script src="bower_components/Chart.js/Chart.js"></script>
+  
 </head>
 
 <body>
 
-
+<canvas id="myChart" width="400" height="400"></canvas>
 
 
 </body>
