--- a/index.html
+++ b/index.html
@@ -6,19 +6,15 @@
 <!--   <link rel = 'stylesheet' type='text/css' href = 'style.css'></> -->
   <script src="jquery.js"></script>
   <script src ="test.js"></script>
-<<<<<<< HEAD
-<link rel="stylesheet" href="https://cdnjs.com/libraries/chart.js">
-=======
->>>>>>> 41f3cc6d63ec8ce6305f5223ec72342784f91f92
+
 </head>
 
 <body>
 
+<canvas id="myChart" width="400" height="400"></canvas>
 
 
 
 </body>
-<<<<<<< HEAD
-=======
+
 </html>
->>>>>>> 41f3cc6d63ec8ce6305f5223ec72342784f91f92
