--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
 <canvas id="myChart" width="400" height="400"></canvas>
 
+<canvas id="myChart2" width="400" height="400"></canvas>
+
+<canvas id="myChart3" width="400" height="400"></canvas>
+
 
 </body>
 </html>
