--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <!--   <link rel = 'stylesheet' type='text/css' href = 'style.css'></> -->
   <script src="jquery.js"></script>
   <script src ="test.js"></script>
+  <script src="medicinePrescriptionFreq.js"></script>
   <script src="bower_components/Chart.js/Chart.js"></script>
 
 </head>
