--- a/index.html
+++ b/index.html
@@ -1,28 +1,45 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
   <meta charset="utf-8">
-  <title>Playing with Serket API</title>
-<!--   <link rel = 'stylesheet' type='text/css' href = 'style.css'></> -->
-  <script src="jquery.js"></script>
-  <script src ="test.js"></script>
-    <script src="statePatternAccuracy.js"></script>
-  <script src="medicinePrescriptionFreq.js"></script>
-
+  <title>Serket Dashboard</title>
+  <link rel = 'stylesheet' type='text/css' href = 'style.css'></>
+  <script src="js/jquery.js"></script>
+  <script src ="js/charts/dailyStatePatternAccuracySept.js"></script>
+    <script src="js/charts/statePatternAccuracy.js"></script>
+  <script src="js/charts/medicinePrescriptionFreq.js"></script>
+  <script src="js/batLogic.js"></script>
   <script src="bower_components/Chart.js/Chart.js"></script>
 
 </head>
 
 <body>
 
-<canvas id="myChart" width="400" height="400"></canvas>
+  <div id="dashboard">
 
-<canvas id="myChart2" width="400" height="400"></canvas>
+    <div id="leftSidebar">
+<p>dtuff in here</p>
 
-<canvas id="myChart3" width="400" height="400"></canvas>
+    </div>
 
+    <div class="chart">
+      <canvas id="myChart"></canvas>
+        <p>Percentage of StatePattern 'True'</p>
+    </div>
 
+    <div class="chart">
+      <canvas id="myChart2"></canvas>
+      <p>The most prescibed medicine</p>
+    </div>
+
+    <div class="chart">
+      <canvas id="myChart3"></canvas>
+        <p>Charting the changes in state pattern accuracy throughout September</p>
+    </div>
+
+  </div>
 
 </body>
 
