--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <meta charset="utf-8">
   <title>Serket Dashboard</title>
   <link rel = 'stylesheet' type='text/css' href = 'style.css'></>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
   <script src="js/jquery.js"></script>
   <script src ="js/charts/dailyStatePatternAccuracySept.js"></script>
-    <script src="js/charts/statePatternAccuracy.js"></script>
+  <script src="js/charts/statePatternAccuracy.js"></script>
   <script src="js/charts/medicinePrescriptionFreq.js"></script>
   <script src="js/batLogic.js"></script>
   <script src="bower_components/Chart.js/Chart.js"></script>
@@ -17,29 +19,39 @@
 
 <body>
 
-  <div id="dashboard">
 
-    <div id="leftSidebar">
-<p>dtuff in here</p>
+  <div id="leftSidebar">
 
-    </div>
+    <h2>Serket</h2>
 
-    <div class="chart">
-      <canvas id="myChart"></canvas>
-        <p>Percentage of StatePattern 'True'</p>
-    </div>
-
-    <div class="chart">
-      <canvas id="myChart2"></canvas>
-      <p>The most prescibed medicine</p>
-    </div>
-
-    <div class="chart">
-      <canvas id="myChart3"></canvas>
-        <p>Charting the changes in state pattern accuracy throughout September</p>
-    </div>
+    <ul>
+      <li>one</li>
+      <li>two</li>
+      <li>three</li>
+      <li>four</li>
+      <li>five</li>
+    </ul>
 
   </div>
+
+  <div id="dashboard">
+    <h3>Welcome, Customer Name</h3>
+
+    <div class="chart">
+      <h4>Percentage of StatePattern 'True'</h4>
+       <canvas id="myChart"></canvas>
+    </div>
+
+    <div class="chart">
+      <h4>The most prescibed medicine</h4>
+       <canvas id="myChart2"></canvas>
+    </div>
+
+    <div class="chart">
+      <h4>Charting the changes in state pattern accuracy throughout September</h4>
+       <canvas id="myChart3"></canvas>
+    </div>
+ </div>
 
 </body>
 
