Sidebar - toggle class list items

--- a/index.html
+++ b/index.html
@@ -25,17 +25,34 @@
     <h2>Serket</h2>
 
     <ul>
-      <li>one</li>
-      <li>two</li>
-      <li>three</li>
-      <li>four</li>
-      <li>five</li>
+      <li class="side-nav">
+        <a href="#/dash-home" class="">
+          <div class="page"></div>
+          <h5>Page 1</h5>
+        </a>
+      </li>
+      <li class="side-nav">
+        <a href="#/dash-page2" class="">
+          <div class="page"></div>
+          <h5>Page 2</h5>
+        </a>
+      </li>
+      <li class="side-nav">
+        <a href="#/dash-page3" class="">
+          <div class="page3"></div>
+          <h5>Page 3</h5>
+        </a>
+      </li>
     </ul>
 
   </div>
 
   <div id="dashboard">
+
+    <div class="welcome">
     <h3>Welcome, Customer Name</h3>
+
+  </div>
 
     <div class="chart">
       <h4>Percentage of StatePattern 'True'</h4>
