Responsive chart overlap corrected

--- a/index.html
+++ b/index.html
@@ -51,23 +51,29 @@
 
     <div class="welcome">
     <h3>Welcome, Customer Name</h3>
+   </div>
 
-  </div>
+    <div class="outer-chart">
+      <div class="chart">
+        <h4>Percentage of StatePattern 'True'</h4>
+         <canvas id="myChart"></canvas>
+      </div>
+   </div>
 
-    <div class="chart">
-      <h4>Percentage of StatePattern 'True'</h4>
-       <canvas id="myChart"></canvas>
-    </div>
+    <div class="outer-chart">
+      <div class="chart">
+        <h4>The most prescibed medicine</h4>
+         <canvas id="myChart2"></canvas>
+      </div>
+   </div>
 
-    <div class="chart">
-      <h4>The most prescibed medicine</h4>
-       <canvas id="myChart2"></canvas>
-    </div>
+    <div class="outer-chart">
+      <div class="chart">
+        <h4>Charting the changes in state pattern accuracy throughout September</h4>
+         <canvas id="myChart3"></canvas>
+      </div>
+   </div>
 
-    <div class="chart">
-      <h4>Charting the changes in state pattern accuracy throughout September</h4>
-       <canvas id="myChart3"></canvas>
-    </div>
  </div>
 
 </body>
