Date Picker test passing

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="js/charts/statePatternAccuracy.js"></script>
   <script src="js/charts/medicinePrescriptionFreq.js"></script>
   <script src="js/batLogic.js"></script>
+  <script src="js/functions.js"></script>
   <script src="bower_components/Chart.js/Chart.js"></script>
 
 </head>
